--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/*==================== Font and Typography ====================*/
+
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
 /*============================
 Define Custome CSS
 ===============================*/
@@ -33,6 +38,7 @@ body{
     overflow-x: hidden;
     background-color: var(--bg-black-50);
     height: 100%;
+    font-family: 'Lobster', cursive;
 }
 .center{
     position: absolute;
@@ -56,8 +62,9 @@ h1 span{
 #clock{
     display: flex;
     width: 100%;
-    margin-left: 10px;
-    margin-top: 60px;
+    /*margin-left: 10px;
+    margin-top: 60px;*/
+    margin: 0 auto;
 }
 #clock div{
     position: relative;
