--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,9 @@ h1 span{
 }
 #clock{
     display: flex;
-    width: 100%;
-    /*margin-left: 10px;
-    margin-top: 60px;*/
-    margin: 0 auto;
+    width: 570px;
+    margin-left: 60px;
+    margin-top: 60px;
 }
 #clock div{
     position: relative;
@@ -77,7 +76,7 @@ h1 span{
     margin-right: 0;
 }
 #clock div span{
-    padding: 25px;
+    padding: 30px;
     margin-bottom: 20px;
     font-size: 30px;
     display: block;
